--- a/css/styles.css
+++ b/css/styles.css
@@ -67,3 +67,30 @@ body {
   background-color: #222;
   color: #fff;
 }
+.game-table {
+  max-width: 500px;
+  display: inline-flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.game-card {
+  width: 50px;
+  height: 100px;
+  flex: 0 0 23%;
+  aspect-ratio: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: purple;
+  border-radius: 5px;
+  transition: all 0.2s linear;
+  margin: 1%;
+}
+.game-card i {
+  font-size: 40px;
+  display: none;
+}
+
+.game-card i + i {
+  display: block;
+}
